--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,10 @@
 {
-    "name": "nwidart/icons",
+    "name": "iwish/icons-module",
     "description": "",
     "authors": [
         {
-            "name": "Nicolas Widart",
-            "email": "n.widart@gmail.com"
+            "name": "test",
+            "email": "test@test.com"
         }
     ],
     "extra": {
@@ -19,5 +19,6 @@
         "psr-4": {
             "Modules\\Icons\\": ""
         }
-    }
+    },
+    "type": "laravel-module"
 }
